--- a/PhoneBill-Android/app/src/main/res/values/strings.xml
+++ b/PhoneBill-Android/app/src/main/res/values/strings.xml
@@ -35,4 +35,7 @@
     <string name="start_time">Start Time</string>
     <string name="end_time">End Time</string>
     <string name="print_phone_bill">Print Phone Bill</string>
+    <string name="search_phone_bill">Search Phone Bill</string>
+    <string name="result_customer_name">Customer Name: %s</string>
+    <string name="no_phone_bills">No Phone Bills Found</string>
 </resources>
