--- a/PhoneBill-Android/app/src/main/res/values/strings.xml
+++ b/PhoneBill-Android/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="search_phone_bill">Search Phone Bill</string>
     <string name="result_customer_name">Customer Name: %s</string>
     <string name="no_phone_bills">No Phone Bills Found</string>
+    <string name="duration">%s for %d minutes</string>
 </resources>
