--- a/PhoneBill-Android/app/src/main/res/values/strings.xml
+++ b/PhoneBill-Android/app/src/main/res/values/strings.xml
@@ -63,4 +63,5 @@
     <string name="phone">Phone</string>
     <string name="bill">Bill App</string>
     <string name="phone_bill_image">Phone Bill Image</string>
+    <string name="forbes_miyasato">Forbes Miyasato</string>
 </resources>
